--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,4 @@ version = "1.0.0"
 authors = [ "viraptor@gmail.com" ]
 repository = "https://github.com/viraptor/coinaddress"
 keywords = [ "bitcoin", "litecoin", "address", "validate" ]
-license = [ "MIT" ]
+license = "MIT"
