--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,13 @@ name = "coinaddress"
 version = "1.0.0"
 authors = [ "viraptor@gmail.com" ]
 repository = "https://github.com/viraptor/coinaddress"
+homepage = "https://github.com/viraptor/coinaddress"
 keywords = [ "bitcoin", "litecoin", "address", "validate" ]
 license = "MIT"
+description = """
+Library for validating the base58 hash checksums, including specifically
+the bitcoin and litecoin addresses.
+"""
 
 [lib]
 name = "coinaddress"
