--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,10 @@ bench = true
 [dependencies]
 num = ">= 0.1.3"
 sha2 = "0.5.1"
+
+[dev-dependencies]
+bencher = "0.1.2"
+
+[[bench]]
+name = "benchmark"
+harness = false
